# Cypheron-core

./: .dockerignore  .env.production  .env.production.example  .gcloudignore  .gitignore  .gitignore.public  .gitmodules  API_CHEAT_SHEET.md  ARCHITECTURE.md  BENCHMARK_REPORT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CUSTOMER-ONBOARDING.md  Cargo.toml  Cypheron-core_API_Routes.md  DEPLOYMENT.md  Database_Integration_Guide.md  Dockerfile  Dockerfile.alpine  Dockerfile.production  Dockerfile.production-debug  FIRESTORE_SETUP.md  LICENSE  PRODUCTION-DEPLOYMENT.md  README.md  ROADMAP.md  SECURITY.md  UNSAFE_GUIDE.md  add_test_key.json  benchmark.json  build-static.sh  build.txt  claude.md  client_examples.md  cloudbuild.yaml  compatibility_test_matrix.rs  delete_api_keys.py  deploy.sh  deployment-strategy.md  (+19 more)
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: pull-request.md
.github/workflows/: ci.yml  cross-platform.yml  docs.yml  release.yml  rust.yml
benchmarks/: BENCHMARK_SUMMARY.md  Cargo.toml
benchmarks/benches/: comparative_benchmarks.rs  crypto_benchmarks.rs  hybrid_kem_benchmarks.rs  hybrid_signature_benchmarks.rs  kem_benchmarks.rs  regression_benchmarks.rs  security_benchmarks.rs  sig_benchmarks.rs  signature_benchmarks.rs  workflow_benchmarks.rs
benchmarks/src/: analysis.rs  lib.rs  report.rs  utils.rs
cli/: Cargo.toml
core-lib/: Cargo.toml  build.rs
core-lib/benches/: crypto_benchmarks.rs
core-lib/examples/: optimization_demo.rs
core-lib/src/: lib.rs  optimization.rs  security.rs
core-lib/src/hybrid/: composite.rs  ecdsa.rs  kem.rs  mod.rs  schemes.rs  traits.rs
core-lib/src/kat/: mod.rs
core-lib/src/kem/: kyber.rs  kyber1024.rs  kyber512.rs  kyber768.rs  ml_kem_1024.rs  ml_kem_512.rs  ml_kem_768.rs  mod.rs  sizes.rs
core-lib/src/optimization/: factory.rs  runtime.rs  strategy.rs  variants.rs
core-lib/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs  windows_rand.rs
core-lib/src/sig/: mod.rs  traits.rs
core-lib/src/sig/dilithium/: common.rs  errors.rs  mod.rs
core-lib/src/sig/dilithium/dilithium2/: api.rs  bindings.rs  engine.rs  mod.rs  types.rs
core-lib/src/sig/dilithium/dilithium3/: api.rs  bindings.rs  engine.rs  mod.rs  types.rs
core-lib/src/sig/dilithium/dilithium5/: api.rs  bindings.rs  engine.rs  mod.rs  types.rs
core-lib/src/sig/dilithium2/: api.rs  bindings.rs  engine.rs  mod.rs  types.rs
core-lib/src/sig/dilithium3/: api.rs  bindings.rs  engine.rs  mod.rs
core-lib/src/sig/dilithium5/: api.rs  bindings.rs  mod.rs  types.rs
core-lib/src/sig/falcon/: api.rs  bindings.rs  common.rs  engine.rs  errors.rs  mod.rs  types.rs
core-lib/src/sig/falcon/falcon1024/: api.rs  constants.rs  engine.rs  mod.rs  types.rs
core-lib/src/sig/falcon/falcon512/: api.rs  constants.rs  engine.rs  mod.rs  types.rs
core-lib/src/sig/sphincs/: bindings.rs  common.rs  engine.rs  errors.rs  mod.rs  types.rs
core-lib/src/sig/sphincs/haraka_192f/: api.rs  bindings.rs  engine.rs  mod.rs  types.rs
core-lib/src/sig/sphincs/sha2_256s/: api.rs  bindings.rs  engine.rs  mod.rs  types.rs
core-lib/src/sig/sphincs/shake_128f/: api.rs  bindings.rs  engine.rs  mod.rs  types.rs
core-lib/tests/: README.md  crypto_properties.rs  falcon1024_test.rs  falcon512_test.rs  integration_test_suite.rs  kat_tests.rs  kyber1024_test.rs  kyber512_test.rs  kyber768_test.rs  kyber_test.rs  sphincs_haraka192f_test.rs  sphincs_sha2_256s_test.rs  sphincs_shake128f_test.rs
core-lib/tests/fuzz/: Cargo.toml  corpus_manager.rs
core-lib/tests/fuzz/fuzz_targets/: fuzz_hybrid_ecc_dilithium.rs  fuzz_ml_dsa_44.rs  fuzz_ml_kem_512.rs
core-lib/tests/kat/: kat_tests.rs
core-lib/tests/property/: crypto_properties.rs
core-lib/tests/security/: memory_safety_tests.rs  sidechannel_tests.rs  test_runner.rs  timing_tests.rs
docs/: README.md  book.toml
docs/advanced/: algorithm-selection.md
docs/book/: toc.js  (+5 more)
grpc-api/: Cargo.toml
integration_tests/: e2e_crypto_workflows.rs
rest-api/: Cargo.toml  DEPLOYMENT-SECURITY-CHECKLIST.md  firestore.md  res.py  securityarch.md
rest-api/db/: schema.sql
rest-api/src/: config.rs  database.rs  error.rs  lib.rs  main.rs  state.rs  validation.rs
rest-api/src/api/: hybrid.rs  kem.rs  mod.rs  monitoring.rs  nist.rs  public.rs  sig.rs
rest-api/src/cache/: mod.rs
rest-api/src/handlers/: hybrid_handler.rs  kem_handler.rs  mod.rs  monitoring_handler.rs  nist_compliance.rs  sig_handler.rs  status_handler.rs
rest-api/src/metrics/: firestore.rs  mod.rs
rest-api/src/models/: analytics.rs  hybrid.rs  kem.rs  mod.rs  sig.rs
rest-api/src/monitoring/: alerts.rs  analytics_logger.rs  compliance.rs  health.rs  metrics.rs  mod.rs  security_events.rs
rest-api/src/monitoring/metrics/: mod.rs
rest-api/src/security/: api_key.rs  audit.rs  auth.rs  compliance.rs  error_sanitizer.rs  gateway_auth.rs  metrics_middleware.rs  middleware.rs  mod.rs  rate_limit.rs  timeout.rs
rest-api/src/security/auth/: demo_auth.rs  encryption.rs  errors.rs  hybrid_encryption.rs  jwt_middleware.rs  jwt_validation.rs  middleware.rs  mod.rs  models.rs  permissions.rs  repository.rs  store.rs  utils.rs  validation.rs
rest-api/src/security/auth/tests/: mod.rs
rest-api/src/security/repository/: firestore_repository.rs  mod.rs  postgres_repository.rs
rest-api/src/security/validation/: mod.rs  pipeline.rs  validators.rs
rest-api/src/services/: hybrid_service.rs  kem_service.rs  mod.rs  sig_service.rs
rest-api/src/utils/: encoding.rs  mod.rs
rest-api/static/: index.html
rest-api/static-build/: index.html
rest-api/tests/: core_lib_integration_tests.rs
scripts/: api_key_manager.py  check-vendor-updates.sh  create_test_key.py  deploy-production.sh  emergency_key_creator.py  install-macos.sh  install-windows.ps1  manage-api-keys.sh  prepare-public-repo.sh  secure-existing-service.sh  setup-production.sh  setup-secrets.sh  vendor-integrity.sh
terraform/: database.tf  main.tf  outputs.tf  terraform.tfstate.1754604370.backup  terraform.tfvars.backup.1754289379  terraform.tfvars.example  terraform.tfvars.postgresql  variables.tf
(+57 files in other folders)
