[package]
name = "cypheron-benchmarks"
version = "0.1.0"
edition = "2021"

[dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
core-lib = { path = "../core-lib" }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
rayon = "1.8"
csv = "1.3"
plotters = "0.3"

[[bench]]
name = "kem_benchmarks"
harness = false

[[bench]]
name = "sig_benchmarks"
harness = false

[[bench]]
name = "comparative_benchmarks"
harness = false

[dev-dependencies]
tempfile = "3.8"