[package]
name = "cypheron-benchmarks"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
core-lib = { path = "../core-lib" }
criterion = { version = "0.7", features = ["html_reports"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bench]]
name = "crypto_benchmarks"
harness = false

[[bench]]
name = "kem_benchmarks"
harness = false

[[bench]]
name = "signature_benchmarks"
harness = false

[[bench]]
name = "hybrid_signature_benchmarks"
harness = false

[[bench]]
name = "hybrid_kem_benchmarks"
harness = false

[[bench]]
name = "security_benchmarks"
harness = false

[[bench]]
name = "workflow_benchmarks"
harness = false

[[bench]]
name = "regression_benchmarks"
harness = false

[profile.bench]
debug = true