[package]
name = "core-lib"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
secrecy = "0.10.3"
thiserror = "2.0.12"
libc = "0.2.174"
zeroize = { version = "1.8.1", features = ["derive"] }
rand = "0.9.2"
once_cell = "1.21.3"
num_cpus = "1.17"
p256 = { version = "0.13", features = ["ecdsa", "sha256"] }
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }

# Platform-specific dependencies
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Security_Cryptography",
    "Win32_System_Memory",
    "Win32_System_SystemInformation",
] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
security-framework = "3.2"

[target.'cfg(target_os = "linux")'.dependencies]
# Linux uses standard libc, no additional dependencies needed

[build-dependencies]
cc = "1.2.30"
bindgen = "0.72.0"

[dev-dependencies]
core-lib = { path = "." }
# Security testing dependencies
proptest = "1.7"
criterion = { version = "0.7", features = ["html_reports"] }
hex = "0.4"
# Note: dudect requires nightly features, added as optional for timing tests
# dudect = "0.4"  # Uncomment when using nightly Rust for side-channel testing

[features]
default = []
derand = []

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ["cfg(rust_analyzer)"] }
