[package]
name = "rest-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.44.2", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
secrecy = "0.10.3"
thiserror = "2.0.12"
tracing = "0.1"
tracing-subscriber = "0.3"
hex = "0.4"

core-lib = { path = "../core-lib" }
hyper = "1.6.0"
p256 = "0.13.2"
