[package]
name = "rest-api"
version = "0.1.0"
edition = "2021"

[dependencies]
subtle = "2.5"
axum = "0.8.4"
tokio = { version = "1.44.2", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
secrecy = "0.10.3"
thiserror = "2.0.12"
tracing = "0.1"
tracing-subscriber = "0.3"
hex = "0.4"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "limit"] }
headers = "0.3"
sha2 = "0.10"
rand = "0.8"
regex = "1.10"
urlencoding = "2.1"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
argon2 = "0.5"
chacha20poly1305 = "0.10"
zeroize = "1.7"

core-lib = { workspace = true }
hyper = "1.6.0"
p256 = "0.13.2"
