[package]
name = "rest-api"
version = "0.1.0"
edition = "2021"

[dependencies]
subtle = "2.6"
axum = "0.8.4"
tokio = { version = "1.46.1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
secrecy = "0.10.3"
thiserror = "2.0.12"
tracing = "0.1"
tracing-subscriber = "0.3"
hex = "0.4"
uuid = { version = "1.17", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9.3"
tower = { version = "0.5", features = ["timeout", "limit"] }
tower-http = { version = "0.6", features = ["cors", "trace", "limit", "timeout"] }
headers = "0.4"
sha2 = "0.10"
rand = "0.9"
regex = "1.11"
urlencoding = "2.1"
argon2 = "0.5"
chacha20poly1305 = "0.10"
zeroize = "1.8"

reqwest = { version = "0.12", features = ["json"] }
ring = "0.17"
rsa = "0.9.8"
async-trait = "0.1"
tonic = "0.14.1"

core-lib = { workspace = true }
hyper = "1.6.0"
p256 = "0.13.2"
gcloud-sdk = { version = "0.27.3", features = ["google-firestore-v1"] }
rustls = { version = "0.23", features = ["ring"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
deadpool-postgres = "0.14"
clap = { version = "4.5", features = ["derive"] }

redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
